03-services.yaml
---
# STABLE Service — receives traffic for stable (old) pods
apiVersion: v1
kind: Service
metadata:
  name: canary-app-stable
  namespace: canary-demo
  labels:
    app: canary-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30090
    name: http
  selector:
    app: canary-app

---
# CANARY Service — receives traffic for canary (new) pods
apiVersion: v1
kind: Service
metadata:
  name: canary-app-canary
  namespace: canary-demo
  labels:
    app: canary-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30091
    name: http
  selector:
    app: canary-app
